# sigmaker_ida9.1

./: README.md
IDA Pro SigMaker/: Main.cpp
macos/: CMakeLists.txt
macos/src/: Main.cpp  Main.h  Plugin.h  Utils.h  Utils.mm  sdk_compat.hpp
